fix: banner page home version mobile

--- a/kasa/src/components/Banner/BannerStyle.scss
+++ b/kasa/src/components/Banner/BannerStyle.scss
@@ -16,6 +16,8 @@
         font-size: 18px;
         margin: $marginM;
         padding:0 16px;
+        height: 111px;
+        font-weight: 700;
     }
     
 }
