--- a/kasa/src/components/cards/CardsStyle.scss
+++ b/kasa/src/components/cards/CardsStyle.scss
@@ -20,6 +20,8 @@
         display: flex;
         flex-direction: column;
         gap: 20px;
+        padding-top: 0;
+        padding-bottom: 0;
     }
 }
 
